--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,23 +1,30 @@
-# Include documentation (for users)
+# Include documentation
 include README.md
+include USAGE.md
 include LICENSE
+
+# Include container files
+include Dockerfile
+include docker-compose.yml
+include podman-compose.yml
+include .dockerignore
+include install_podman.sh
 
 # Include examples
 recursive-include examples *.py
 
-# Exclude maintainer files
-exclude PUBLISHING.md
-exclude train_and_eval.py
-exclude add_ids_to_dataset.py
-
 # Exclude build/output directories
+recursive-exclude checkpoints *
 recursive-exclude checkpoints_fixed *
 recursive-exclude outputs *
+recursive-exclude data *
+recursive-exclude datasets *
 
 # Exclude Python artifacts
 global-exclude __pycache__
 global-exclude *.py[cod]
 global-exclude *.so
+global-exclude .ipynb_checkpoints
 
 # Exclude OS files
 global-exclude .DS_Store
